[gd_scene load_steps=2 format=3 uid="uid://bvq8yjx7nxc8k"]

[ext_resource type="Script" path="res://scripts/ui/LoadingScreen.gd" id="1"]

[node name="LoadingScreen" type="CanvasLayer"]
process_mode = 3
layer = 1000
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.06, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingPanel" type="PanelContainer" parent="Background/CenterContainer"]
layout_mode = 2

[node name="LoadingContainer" type="HBoxContainer" parent="Background/CenterContainer/LoadingPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LoadingText" type="Label" parent="Background/CenterContainer/LoadingPanel/LoadingContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.91, 1, 1)
theme_override_font_sizes/font_size = 36
text = "LOADING"

[node name="Spinner" type="Polygon2D" parent="Background/CenterContainer/LoadingPanel/LoadingContainer"]
position = Vector2(-30, 24)
color = Color(1, 0.29, 0.85, 1)
polygon = PackedVector2Array(0, -16, 16, 0, 0, 16, -16, 0)
